song-genre-notebook-complete

--- a/01-classification-song-genre/song-genre-notebook.ipynb
+++ b/01-classification-song-genre/song-genre-notebook.ipynb
@@ -5,8 +5,6 @@
    "metadata": {},
    "source": [
     "## 1. Preparing our dataset\n",
-    "<p><em>These recommendations are so on point! How does this playlist know me so well?</em></p>\n",
-    "<p><img src=datasets/original-music.avif alt=\"Project Image Record\" width=\"600px\"></p>\n",
     "<p>Over the past few years, streaming services with huge catalogs have become the primary means through which most people listen to their favorite music. But at the same time, the sheer amount of music on offer can mean users might be a bit overwhelmed when trying to look for newer music that suits their tastes.</p>\n",
     "<p>For this reason, streaming services have looked into means of categorizing music to allow for personalized recommendations. One method involves direct analysis of the raw audio information in a given song, scoring the raw data on a variety of metrics. Today, we'll be examining data compiled by a research group known as The Echo Nest. Our goal is to look through this dataset and classify songs as being either 'Hip-Hop' or 'Rock' - all without listening to a single one ourselves. In doing so, we will learn how to clean our data, do some exploratory data visualization, and use feature reduction towards the goal of feeding our data through some simple machine learning algorithms, such as decision trees and logistic regression.</p>\n",
     "<p>To begin with, let's load the metadata about our tracks alongside the track metrics compiled by The Echo Nest. A song is about more than its title, artist, and number of listens. We have another dataset that has musical features of each track such as <code>danceability</code> and <code>acousticness</code> on a scale from -1 to 1. These exist in two different files, which are in different formats - CSV and JSON. While CSV is a popular file format for denoting tabular data, JSON is another common file format in which databases often return the results of a given query.</p>\n",
@@ -874,7 +872,14 @@
     "\n",
     "# Scaling the train and test features\n",
     "scaler = StandardScaler()\n",
+    "\n",
+    "# The fit method is calculating the mean and variance of each of the features present in the data.\n",
+    "# The transform method is transforming all the features using the respective mean and variance.\n",
     "scaled_train_features = scaler.fit_transform(train_features)\n",
+    "\n",
+    "# If we used the fit_transform method on the test data as well, it would compute a new mean and variance.\n",
+    "# This would cause the model to learn from the test data itself, which is what we want to avoid.\n",
+    "# Using the transform method, we can use the same mean and variance as it was calculated from the training data.\n",
     "scaled_test_features = scaler.transform(test_features)"
    ]
   },
@@ -924,8 +929,13 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "# Get the explained variance ratios from PCA using all features\n",
+    "# if n_components is not set all components are kept\n",
     "pca = PCA()\n",
+    "\n",
+    "# Fit PCA to the scaled train features; pca.fit(X)\n",
     "pca.fit(scaled_train_features)\n",
+    "\n",
+    "# Percentage of variance explained by each of the selected components\n",
     "exp_variance = pca.explained_variance_ratio_\n",
     "\n",
     "# Plot the explained variance using a barplot\n",
@@ -1004,7 +1014,7 @@
     "# Fit and transform the scaled training features\n",
     "train_pca = pca.fit_transform(scaled_train_features)\n",
     "\n",
-    "# Tranform the scaled test features\n",
+    "# Transform the scaled test features\n",
     "test_pca = pca.transform(scaled_test_features)"
    ]
   },
@@ -1019,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,6 +1042,257 @@
     "\n",
     "# Predict the labels for the test data\n",
     "pred_labels_tree = tree.predict(test_pca)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Compare our decision tree to a logistic regression\n",
+    "<p>Although our tree's performance is decent, it's a bad idea to immediately assume that it's therefore the perfect tool for this job -- there's always the possibility of other models that will perform even better! It's always a worthwhile idea to at least test a few other algorithms and find the one that's best for our data.</p>\n",
+    "<p>Sometimes simplest is best, and so we will start by applying <strong>logistic regression</strong>. Logistic regression makes use of what's called the logistic function to calculate the odds that a given data point belongs to a given class. Once we have both models, we can compare them on a few performance metrics, such as false positive and false negative rate (or how many points are inaccurately classified). </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     Hip-Hop       0.70      0.70      0.70       229\n",
+      "        Rock       0.93      0.93      0.93       972\n",
+      "\n",
+      "    accuracy                           0.88      1201\n",
+      "   macro avg       0.81      0.81      0.81      1201\n",
+      "weighted avg       0.88      0.88      0.88      1201\n",
+      "\n",
+      "Logistic Regression: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     Hip-Hop       0.76      0.57      0.65       229\n",
+      "        Rock       0.90      0.96      0.93       972\n",
+      "\n",
+      "    accuracy                           0.88      1201\n",
+      "   macro avg       0.83      0.76      0.79      1201\n",
+      "weighted avg       0.88      0.88      0.88      1201\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Train the logistic regression and predict the labels for the test set\n",
+    "logreg = LogisticRegression(random_state=10)\n",
+    "\n",
+    "# Fit the model according to the given training data\n",
+    "logreg.fit(train_pca, train_labels)\n",
+    "\n",
+    "# Predict class labels for samples in the test data\n",
+    "pred_labels_logit = logreg.predict(test_pca)\n",
+    "\n",
+    "# Create the classification report for both models\n",
+    "from sklearn.metrics import classification_report\n",
+    "class_rep_tree = classification_report(test_labels, pred_labels_tree)\n",
+    "class_rep_log = classification_report(test_labels, pred_labels_logit)\n",
+    "\n",
+    "print(\"Decision Tree: \\n\", class_rep_tree)\n",
+    "print(\"Logistic Regression: \\n\", class_rep_log)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Balance our data for greater performance\n",
+    "<p>Both our models do similarly well, boasting an average precision of 88% each. However, looking at our classification report, we can see that rock songs are fairly well classified, but hip-hop songs are disproportionately misclassified as rock songs. </p>\n",
+    "<p>Why might this be the case? Well, just by looking at the number of data points we have for each class, we see that we have far more data points for the rock classification than for hip-hop, potentially skewing our model's ability to distinguish between classes. This also tells us that most of our model's accuracy is driven by its ability to classify just rock songs, which is less than ideal.</p>\n",
+    "<p>To account for this, we can weight the value of a correct classification in each class inversely to the occurrence of data points for each class. Since a correct classification for \"Rock\" is not more important than a correct classification for \"Hip-Hop\" (and vice versa), we only need to account for differences in <em>sample size</em> of our data points when weighting our classes here, and not relative importance of each class. </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Subset only the hip-hop tracks, and then only the rock tracks\n",
+    "hop_only = echo_tracks.loc[echo_tracks['genre_top'] == 'Hip-Hop']\n",
+    "rock_only = echo_tracks.loc[echo_tracks['genre_top'] == 'Rock']\n",
+    "\n",
+    "# Sample the rock songs to be the same number as there are hip-hop songs\n",
+    "rock_only = rock_only.sample(len(hop_only), random_state=10)\n",
+    "\n",
+    "# Concatenate the dataframes rock_only and hop_only\n",
+    "rock_hop_bal = pd.concat([rock_only, hop_only])\n",
+    "\n",
+    "# The features and labels are created for the balanced dataframe\n",
+    "features = rock_hop_bal.drop(['genre_top', 'track_id'], axis=1)\n",
+    "labels = rock_hop_bal['genre_top']\n",
+    "\n",
+    "# Split the training and test sets\n",
+    "train_features, test_features, train_labels, test_labels = train_test_split(features, labels, random_state=10)\n",
+    "\n",
+    "# 1-Scale the train and test features, 2-Perform PCA projection\n",
+    "# pca = PCA(n_components=6, random_state=10); was already done above\n",
+    "train_pca = pca.fit_transform(scaler.fit_transform(train_features))\n",
+    "test_pca = pca.transform(scaler.transform(test_features))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Does balancing our dataset improve model bias?\n",
+    "<p>We've now balanced our dataset, but in doing so, we've removed a lot of data points that might have been crucial to training our models. Let's test to see if balancing our data improves model bias towards the \"Rock\" classification while retaining overall classification performance. </p>\n",
+    "<p>Note that we have already reduced the size of our dataset and will go forward without applying any dimensionality reduction. In practice, we would consider dimensionality reduction more rigorously when dealing with vastly large datasets and when computation times become prohibitively large.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     Hip-Hop       0.75      0.79      0.77       230\n",
+      "        Rock       0.77      0.73      0.75       225\n",
+      "\n",
+      "    accuracy                           0.76       455\n",
+      "   macro avg       0.76      0.76      0.76       455\n",
+      "weighted avg       0.76      0.76      0.76       455\n",
+      "\n",
+      "Logistic Regression: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "     Hip-Hop       0.81      0.83      0.82       230\n",
+      "        Rock       0.83      0.80      0.82       225\n",
+      "\n",
+      "    accuracy                           0.82       455\n",
+      "   macro avg       0.82      0.82      0.82       455\n",
+      "weighted avg       0.82      0.82      0.82       455\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the decision tree on the balanced data\n",
+    "tree = DecisionTreeClassifier(random_state=10)\n",
+    "tree.fit(train_pca, train_labels)\n",
+    "pred_labels_tree = tree.predict(test_pca)\n",
+    "\n",
+    "# Train the logistic regression on the balanced data\n",
+    "logreg = LogisticRegression(random_state=10)\n",
+    "logreg.fit(train_pca, train_labels)\n",
+    "pred_labels_logit = logreg.predict(test_pca)\n",
+    "\n",
+    "# Compare the models\n",
+    "print(\"Decision Tree: \\n\", classification_report(test_labels, pred_labels_tree))\n",
+    "print(\"Logistic Regression: \\n\", classification_report(test_labels, pred_labels_logit))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Using cross-validation to evaluate our models\n",
+    "<p>Success! Balancing our data has removed bias towards the more prevalent class. To get a good sense of how well our models are actually performing, we can apply what's called <strong>cross-validation</strong> (CV). This step allows us to compare models in a more rigorous fashion.</p>\n",
+    "<p>Before we can perform cross-validation we will need to create pipelines to scale our data, perform PCA, and instantiate our model of choice - <code>DecisionTreeClassifier</code> or <code>LogisticRegression</code>.</p>\n",
+    "<p>Since the way our data is split into train and test sets can impact model performance, CV attempts to split the data multiple ways and test the model on each of the splits. Although there are many different CV methods, all with their own advantages and disadvantages, we will use what's known as <strong>K-fold</strong> CV here. K-fold first splits the data into K different, equally sized subsets. Then, it iteratively uses each subset as a test set while using the remainder of the data as train sets. Finally, we can then aggregate the results from each fold for a final model performance score.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree: 0.7449978531558609 Logistic Regression: 0.8153338342636325\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kausa\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "# Set up the two pipelines\n",
+    "tree_pipeline = Pipeline([(\"scaler\", StandardScaler()), (\"pca\", PCA(n_components=6)), \n",
+    "                          (\"tree\", DecisionTreeClassifier(random_state=10))])\n",
+    "logreg_pipeline = Pipeline([(\"scaler\", StandardScaler()), (\"pca\", PCA(n_components=6)), \n",
+    "                            (\"logreg\", LogisticRegression(random_state=10))])\n",
+    "\n",
+    "# Set up the K-fold cross-validation\n",
+    "kf = KFold(n_splits=10)\n",
+    "\n",
+    "# Train the models using KFold CV\n",
+    "tree_score = cross_val_score(tree_pipeline, train_features, train_labels, cv=kf)\n",
+    "logit_score = cross_val_score(logreg_pipeline, train_features, train_labels, cv=kf)\n",
+    "\n",
+    "# Print the mean of each array of scores\n",
+    "print(\"Decision Tree:\", np.mean(tree_score), \"Logistic Regression:\", np.mean(logit_score))"
    ]
   }
  ],
