--- a/05-grocery-time-series/store-sales.ipynb
+++ b/05-grocery-time-series/store-sales.ipynb
@@ -41,10 +41,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#train = pd.read_csv('datasets/train.csv')\n",
-    "#test = pd.read_csv('datasets/test.csv')\n",
+    "train = pd.read_csv('datasets/train.csv')\n",
+    "test = pd.read_csv('datasets/test.csv')\n",
     "stores = pd.read_csv('datasets/stores.csv')\n",
-    "#sub = pd.read_csv('datasets/sample_submission.csv')\n",
+    "sub = pd.read_csv('datasets/sample_submission.csv')\n",
     "transactions = pd.read_csv('datasets/transactions.csv')"
    ]
   },
@@ -147,12 +147,10 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
     "train[\"date\"] = pd.to_datetime(train[\"date\"])\n",
     "train.onpromotion = train.onpromotion.astype(\"float16\")\n",
     "train.sales = train.sales.astype(\"float32\")\n",
-    "train.head()\n",
-    "\"\"\""
+    "train.head()"
    ]
   },
   {
@@ -248,10 +246,8 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
     "test[\"date\"] = pd.to_datetime(test[\"date\"])\n",
-    "test.head()\n",
-    "\"\"\""
+    "test.head()"
    ]
   },
   {
